reading from file and http location is ok