@@ -3,7 +3,6 @@ package cz.cuni.mff.xrg.odcs.organizationExtractor.core;
 import java.io.File;
 import java.io.FilenameFilter;
 import java.io.IOException;
-import java.net.MalformedURLException;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -58,8 +57,7 @@ public class CsvOrganizationExtractor extends ConfigurableBase<CsvOrganizationEx
         final boolean onlyThisSuffix = config.OnlyThisSuffix;
         boolean useStatisticHandler = config.UseStatisticalHandler;
         boolean failWhenErrors = config.failWhenErrors;
-        RDFFormatType formatType = config.RDFFormatValue;
-        final RDFFormat format = RDFFormatType.getRDFFormatByType(formatType);
+        final RDFFormat format = RDFFormatType.getRDFFormatByType(RDFFormatType.RDFXML);
         final HandlerExtractType handlerExtractType = HandlerExtractType.getHandlerType(useStatisticHandler, failWhenErrors);
 
         LOG.debug("extractType: {}", extractType);
@@ -69,13 +67,14 @@ public class CsvOrganizationExtractor extends ConfigurableBase<CsvOrganizationEx
         LOG.debug("onlyThisSuffix: {}", onlyThisSuffix);
         LOG.debug("useStatisticHandler: {}", useStatisticHandler);
         File rdfDirectory = null;
+
         try {
-            File globalDirectory  = context.getGlobalDirectory();
+            File globalDirectory = context.getGlobalDirectory();
             Path path = globalDirectory.toPath();
-            Path  rdfsPath = Files.createTempDirectory(path, "");
+            Path rdfsPath = Files.createTempDirectory(path, "");
             LOG.debug("created a temp file. Path: " + rdfsPath.toAbsolutePath());
             rdfDirectory = rdfsPath.toFile();
-            URL sourceUrl = getSourceUrl(sourceCSV);
+            URL sourceUrl = getSourceUrl(sourceCSV, extractType);
             performET(context, batchSize, debugProcessOnlyNItems, sourceUrl, rdfDirectory);
             File[] files = getFiles(rdfDirectory);
             exportFiles(context, baseURI, extractType, fileSuffix, onlyThisSuffix, format, handlerExtractType, files);
@@ -85,7 +84,7 @@ public class CsvOrganizationExtractor extends ConfigurableBase<CsvOrganizationEx
             throw new DPUException(e.getMessage(), e);
         } finally {
             try {
-                if(rdfDirectory != null) {
+                if (rdfDirectory != null) {
                     FileUtils.deleteDirectory(rdfDirectory);
                 }
             } catch (IOException e) {
@@ -93,15 +92,23 @@ public class CsvOrganizationExtractor extends ConfigurableBase<CsvOrganizationEx
                 context.sendMessage(MessageType.ERROR, e.getMessage());
                 throw new DPUException(e.getMessage(), e);
             }
-
         }
     }
 
-
-    private URL getSourceUrl(String sourceCSV) {
+    private URL getSourceUrl(String sourceCSV, FileExtractType extractType) {
         URL url = null;
         try {
-            url = new URL(sourceCSV);
+            switch (extractType) {
+            case HTTP_URL:
+            case PATH_TO_FILE:
+                url = new URL(sourceCSV);
+                break;
+            case UPLOAD_FILE:
+                File file = new File(sourceCSV);
+                url = file.toURI().toURL();
+                break;
+            }
+            LOG.debug("url: " + url.toString());
         } catch (IOException e) {
             LOG.error("An error occoured when path: " + sourceCSV + " was parsing.", e);
         }
@@ -127,8 +134,19 @@ public class CsvOrganizationExtractor extends ConfigurableBase<CsvOrganizationEx
             HandlerExtractType handlerExtractType, File[] files) {
         for (File tmpRdf : files) {
             try {
+                String path = null;
                 if (tmpRdf.exists()) {
-                    String path = tmpRdf.getAbsolutePath();
+
+                    switch (extractType) {
+                    case HTTP_URL:
+                        path = tmpRdf.toURI().toString();
+                        break;
+                    case UPLOAD_FILE:
+                    case PATH_TO_FILE:
+                        path = tmpRdf.getAbsolutePath();
+                        break;
+                    }
+
                     LOG.debug("rdf file: " + path);
                     rdfDataUnit.extractFromFile(extractType, format, path, fileSuffix, baseURI, onlyThisSuffix, handlerExtractType);
                 }
